test/arrays/sparse/OOBbaseDom.good
A[(1, 1)] = 0.0
A[(5, 3)] = 0.0
OOBbaseDom.chpl:24: error: halt reached - Sparse domain/array index out of bounds: (0, 0) (expected to be within {1..10, 1..10})
